checkIfUsernameExists checkIfSubjectExists funcitons written for old java versions